test/error/syntax/missing_name.kat
func main(: int, argv: str) => int {
  let i: int = 1;
  let j: int = 2;
}
